--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.25.3",
